--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# artifacts
+ifacetool-engine
+*.snap
+
+# editor stuff
+*~
+.*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -109,6 +117,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+toolenv
 
 # Spyder project settings
 .spyderproject
