--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pymacaroons==0.13.0
 PyNaCl==1.5.0
 pyRFC3339==1.1
 pytz==2022.2.1
+PyYAML==6.0
 requests==2.28.1
 requests-toolbelt==0.9.1
 SecretStorage==3.3.3
