--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,9 @@
 name: Build ifacetool
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - 0.6-*
 jobs:
   build:
     runs-on: ubuntu-latest
